# charmcraftlocal

./: pyproject.toml
.github/workflows/: check_pr.yaml  release.yaml
charmcraftlocal/: _main.py
