[project]
name = "charmcraftlocal"
dynamic = ["version"]
description = "Pack charms with local Python package dependencies"
authors = [
    {name = "Carl Csaposs", email = "carl.csaposs@canonical.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.16.0",
    "requests>=2.32.4",
    "tomli>=2.2.1",
    "charm-refresh-build-version>=0.4.0",
    "pyyaml>=6.0.2",
]

[project.urls]
repository = "https://github.com/canonical/charmcraftlocal"

[project.scripts]
ccl = "charmcraftlocal._main:app"
charmcraftlocal = "charmcraftlocal._main:app"

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"  # Overriden by poetry-dynamic-versioning

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true
strict = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "UP"]
